2002-10-22  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (w3m-entity-regexp): As simple regexp. Existance of final
	semi-collon is to be detected.
	(w3m-entity-value): 2nd argument STRICT is added. If not STRICT,
	find entity from db by maxmum length matching, and returns it with
	appending unused chars. Returns nil if not match.
	And also use defun instead of defsubst.
	(w3m-decode-entities): Use new `w3m-entity-value' with 2nd arg.

2002-10-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-minor-mode): Define without `define-minor-mode'.
	(w3m-minor-mode): Ditto.
	(w3m-minor-mode-hook): Ditto.
	(w3m-entity-regexp): Set 3000 to `max-specpdl-size' locally to
	avoid max-specpdl-size error.

	* w3m-e19.el: Cancel the last change to define
	`define-minor-mode'.
	* w3m-fsf.el: Ditto.
	* w3m-om.el: Ditto.

	* attic/easy-mmode.el: Removed.

2002-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e19.el: Require `easy-mmode'; make the alias
	`define-minor-mode' to `easy-mmode-define-minor-mode'.
	* w3m-fsf.el: Ditto.
	* w3m-om.el: Ditto.

	* attic/easy-mmode.el: New file imported from Emacs 20.7.

2002-10-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-lynx-like-map, w3m-info-like-map): Add [tab] for
	`w3m-next-anchor'.
	(w3m-safe-view-this-url, w3m-mouse-safe-view-this-url): New
	command.
	(w3m-minor-mode-command-alist): New constant.
	(w3m-make-minor-mode-keymap): New function.
	(w3m-minor-mode-map): New keymap.
	(w3m-minor-mode): New function.

	* mime-w3m.el (mime-w3m-mode-map): Abolished.
	(mime-w3m-mode-command-alist): Abolished.
	(mime-w3m-mode-dont-bind-keys): Abolished.
	(mime-w3m-mode-ignored-keys): Abolished.
	(mime-w3m-setup): Do not initialize `mime-w3m-mode-map'.
	(mime-w3m-preview-text/html): Use `w3m-minor-mode-map' instead of
	`mime-w3m-mode-map'.
	(mime-w3m-view-this-url, mime-w3m-mouse-view-this-url): Removed.

	* mew-w3m.el (mew-w3m-minor-mode): Abolished.
	(mew-w3m-minor-mode-setter): Call `w3m-minor-mode'.
